--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
     --light: #F4F4FD;
     --modal-overlay: #2E2F42;
     --hero-background: #2E2F42;
+    --white-color: #FFFFFF;
 }
 
 .visually-hidden {
@@ -27,11 +28,12 @@
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--text);
-    background-color: #FFFFFF;
+    background-color: var(--white-color);
 }
 
+/* ---Header---*/
 .header {
-    background: #FFFFFF;
+    background: var(--white-color);
 }
 
 .header-link:hover,
@@ -82,8 +84,9 @@ body {
     color: var(--pressed-state);
 }
 
+/* ------------main----------- */
 .box-order,
-.footer {
+.footer-last {
     background: var(--modal-overlay);
 }
 
@@ -91,7 +94,7 @@ body {
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
-    color: #FFFFFF;
+    color: var(--white-color);
     text-align: center;
     letter-spacing: 0.02em;
 }
@@ -100,7 +103,7 @@ body {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    color: #FFFFFF;
+    color: var(--white-color);
     background: var(--primary-brand);
 }
 
@@ -118,7 +121,7 @@ ul {
     font-weight: 800;
     font-size: 18px;
     line-height: 1.7;
-    color: #F4F4FD;
+    color: var(--light);
     text-decoration: none;
 }
 
@@ -156,13 +159,14 @@ ul {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    color: #FFFFFF;
+    color: var(--white-color);
     letter-spacing: 0.04em;
 }
 
+/* -------------footer----------- */
 .subtitle {
     font-size: 16px;
     line-height: 1.5;
-    color: #E7E9FC;
+    color: var(--accent);
     letter-spacing: 0.02em;
 }
