--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,10 @@ body {
     letter-spacing: 0.02em;
 }
 
+.current {
+    color: var(--primary-brand);
+}
+
 .logo {
     color: var(--primary-brand);
     font-family: 'Raleway';
@@ -59,6 +63,7 @@ body {
     line-height: 1.3;
     text-decoration: none;
     letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 
 .logo-next {
@@ -69,14 +74,17 @@ body {
     line-height: 1.3;
     text-decoration: none;
     letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 
 .auth-nav-link {
+    font-style: normal;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--text);
     text-decoration: none;
+    cursor: pointer;
 }
 
 .auth-nav-link:hover,
@@ -100,11 +108,16 @@ body {
 }
 
 .button-main {
+    font-family: 'Roboto';
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     color: var(--white-color);
     background: var(--primary-brand);
+    cursor: pointer;
+    letter-spacing: 0.04em;
+
+
 }
 
 .button-main:hover,
@@ -123,6 +136,7 @@ ul {
     line-height: 1.7;
     color: var(--light);
     text-decoration: none;
+    text-transform: uppercase;
 }
 
 .site-nav {
@@ -159,8 +173,27 @@ ul {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    color: var(--white-color);
+    color: var(--primary-brand);
     letter-spacing: 0.04em;
+    border: 1px solid #E7E9FC;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.button-list :hover,
+.button-list :focus {
+    background-color: var(--pressed-state);
+    color: var(--white-color);
+    cursor: pointer;
+
+}
+
+.content-title {
+    background-color: var(--light);
+}
+
+.portfolio-content {
+    background-color: #E5E5E5;
 }
 
 /* -------------footer----------- */
